Modify different files to do the analysis
Signed-off-by: Chan Jun Wei <chanjunweimy@gmail.com>