@@ -1,6 +1,7 @@
 package learning;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -8,22 +9,39 @@ import java.io.InputStreamReader;
 public class VisualConceptLearner {
 	
 	private static final String PATH_PYTHON_LEARNER = "VisualConceptLearner.py";
-	private static final String PATH_PYTHON_FPGENERATOR = "FilepathsGenerator.py";
+	private static final String PATH_PYTHON_FPGENERATOR = "src/learning/FilepathsGenerator.py";
 	private static final String PATH_TRAIN = "ImageData/train/data";
 	private static final String PATH_OUTPUT_DICT = "ImageData/train/dictionary.txt";
-	private static final String PATH_OUTPUT_FPATHS = "SemanticFeature/data.txt";
+	private static final String PATH_OUTPUT_FPATHS = "semanticFeature/data.txt";
 	
 	public void classifyDatabase() {
 		generateFilepaths();
 		try {
-			@SuppressWarnings("unused")
-			Process classification = new ProcessBuilder(
-					"SemanticFeature/image_classification.exe", "data.txt")
-					.start();
+			/*
+			ProcessBuilder builder = new ProcessBuilder("image_classification.exe", "data.txt");
+			builder.directory(new File("semanticFeature/"));
+			System.out.println(builder.directory().getAbsolutePath());
+			Process classification = builder.start();
+			*/
+			
+			Process classification = Runtime.getRuntime().exec("semanticFeature/image_classification.exe data.txt", null, 
+					new File("semanticFeature/"));
+			
+			InputStream is = classification.getInputStream();
+			InputStreamReader isr = new InputStreamReader(is);
+			BufferedReader br = new BufferedReader(isr);
+			String line;
+			
+			while ((line = br.readLine()) != null) {
+				System.out.println(line);
+			}
+			
+			generateVisualConceptDict();
+
 		} catch (IOException e) {
+			e.printStackTrace();
 			System.out.println("Error calling image_classification.exe");
 		}
-		generateVisualConceptDict();
 	}
 
 	private void generateFilepaths() {
@@ -62,5 +80,10 @@ public class VisualConceptLearner {
 		} catch (IOException e) {
 			System.out.println("Error calling Python VisualConceptLearner script!");
 		}
+	}
+	
+	public static void main(String[] args) {
+		VisualConceptLearner visual = new VisualConceptLearner();
+		visual.classifyDatabase();
 	}
 }
